--- a/src/style/productpage.css
+++ b/src/style/productpage.css
@@ -186,3 +186,38 @@
   background: var(--m_color_g);
   color: var(--m_color_wh);
 }
+
+
+/* 태블릿과 모바일에 공통 적용 */
+@media screen and (max-width: 1024px) {
+
+}
+
+/* 태블릿 전용 */
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  /* .productpage_tab-list {
+  max-width: 700px;
+  display: flex;
+  margin: 0px 1px 61px 47px;
+  justify-content: space-between;
+  gap:2rem;
+}
+
+.productpage_tab-item {
+  max-width: 260px;
+} */
+
+  .productpage_wrap {
+    width: 100%;
+    max-width: none;
+    padding: 0;
+    margin: 0 auto;
+  }
+
+
+}
+
+/* 모바일 전용 */
+@media screen and (max-width: 767px) {
+  
+}
