--- a/src/style/ItemDetail.css
+++ b/src/style/ItemDetail.css
@@ -178,7 +178,7 @@ height: 579px;
   border-top: 1px solid #eee;
   margin-top: 24px;
   width:1200px; 
-  border: 1px solid red;
+  border: 1px solid #ccc;
   margin: 0 auto;
   margin-top: 30px;
   
