--- a/src/style/GoodsInsert.css
+++ b/src/style/GoodsInsert.css
@@ -29,7 +29,7 @@
 }
 
 .goods-insert-form label {
-  min-width: 120px;
+  min-width: 85px;
   font-weight: bold;
 }
 
@@ -60,7 +60,7 @@ input[type="file"] {
 
 /* 사진 영역 */
 .photo-section {
-  width: fit-content; 
+  width: 710px; 
   margin: 0 auto; 
   display: flex;
   gap: 50px;
@@ -106,10 +106,9 @@ input[type="file"] {
   margin-top:30px ;
 }
 
+
 .thumbnail-preview {
   border: none;
-  width: 100px;
-  height: 100px;
   object-fit: cover;
   border: 1px solid #ccc;
   display: inline-block; 
@@ -117,9 +116,10 @@ input[type="file"] {
 
 .button-group {
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   gap: 10px;
   margin-top: 20px;
+  width:auto;
 }
 
 .submit-btn, .cancel-btn {
