--- a/src/style/upcon.css
+++ b/src/style/upcon.css
@@ -7,7 +7,7 @@
   position: relative;
   width: 100%;
   height: 137px;
-  background-color: #ffffff; /* 핑크 배경 색상 */
+  background-color: #ffffff; /* 배경 색상 */
   border-bottom: 2px solid #ccc;
   overflow: hidden;
 }
@@ -29,7 +29,7 @@
 .slider-item { flex: 0 0 auto; margin: 0 40px; }
 
 /* 텍스트 크기 */
-.banner-title { margin: 0; font-size: 40px; font-weight: 700; color: #1fa5ff; line-height: 1.2; }
+.banner-title { margin: 0; font-size: 40px; font-weight: 700; color: #0072BE; line-height: 1.2; }
 .banner-date  { margin: 4px 0 0; font-size: 20px; color: #1fa5ff; }
 
 /* 애니메이션 */
