--- a/src/style/GoodsInsert.css
+++ b/src/style/GoodsInsert.css
@@ -29,7 +29,7 @@
 }
 
 .goods-insert-form label {
-  min-width: 85px;
+  min-width: 120px;
   font-weight: bold;
 }
 
@@ -60,7 +60,7 @@ input[type="file"] {
 
 /* 사진 영역 */
 .photo-section {
-  width: 710px; 
+  width: fit-content; 
   margin: 0 auto; 
   display: flex;
   gap: 50px;
@@ -106,9 +106,10 @@ input[type="file"] {
   margin-top:30px ;
 }
 
-
 .thumbnail-preview {
   border: none;
+  width: 100px;
+  height: 100px;
   object-fit: cover;
   border: 1px solid #ccc;
   display: inline-block; 
@@ -116,10 +117,9 @@ input[type="file"] {
 
 .button-group {
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
   gap: 10px;
   margin-top: 20px;
-  width:auto;
 }
 
 .submit-btn, .cancel-btn {
@@ -228,7 +228,7 @@ input[type="file"] {
 /* 모바일 (최대 767px) */
 @media screen and (max-width: 767px) {
   .goods-insert-container {
-    padding: 20px 15px;
+    padding: 100px 15px;
   }
 
   .goods-insert-container h2 {
@@ -267,8 +267,11 @@ input[type="file"] {
 
   .photo-section {
     flex-direction: column;
-    align-items: center;
+    align-items: center; /* ★ 중앙 정렬 */
+    justify-content: center; /* ★ 추가해도 됨 */
     gap: 20px;
+    width: 100%; /* ★ 가로폭 꽉 채우기 */
+    box-sizing: border-box;
   }
 
   .main-photo {
@@ -324,7 +327,7 @@ input[type="file"] {
   width: 100%;
   display: flex;
   justify-content: center;
-  z-index: 1000;
+  z-index: 10;
 }
 
 .submit-btn,
